SERVER-28179 Fixes inMemoryEngineConfigString

GitOrigin-RevId: 2bd48e0030b19d3bff573a3cc68262a92c554ed1